# AIOTubeDownV2

./: .gitignore  bot.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  run_bot.bat  run_bot.sh  test.py
app/: main.py  test.py  test_extract.py
app/bot/: __init__.py  main.py
app/common/: resource.qrc  resource_rc.py
app/components/: __init__.py  icon_card.py  icons.py  override.py  player.py  qt.py
app/config/: constants.py  settings.py
app/core/: _worker.py  constants.py  convert_worker.py  download_base.py  download_manager.py  download_worker.py  extract_manager.py  license_manager.py  thumbnail_manager.py
app/db/: database.py
app/exec/: __init__.py  main.py
app/extractor/: _cf.py  _cloud.py  _extract.py  _request.py  _tsdl.py  _utils.py  douyin.py  drama.py  drama_base.py  extends_drama.py  facebook.py  instagram.py  kuaishou.py  tiktok copy.py  tiktok.py  uitls.py  youtube.py  youtube_sig.py
app/theme/: __init__.py  colors.css  colors.py  generate.py  theme.py  theme_provider.py  theme_variable.css
app/ui/: action_panel.py  add_url_dialog.py  download_table.py  downloader_page.py  drama_downloader_page.py  license_dialog.py  license_interface.py  main_window.py  properties_dialog.py  settings_page.py  sidebar.py
app/utils/: path.py  validation.py
prompts/: error.md  next.md  project.md  review.md
